--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/_Levels/BattleGround.BattleGround
-GameDefaultMap=/Game/_Levels/BattleGround.BattleGround
+EditorStartupMap=/Game/_Levels/MainMenu.MainMenu
+GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Tank/BattleTankGameMode_BP.BattleTankGameMode_BP_C
 
 [/Script/Engine.PhysicsSettings]
