--- a/BattleTank/Config/DefaultEngine.ini
+++ b/BattleTank/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/_Levels/MainMenu.MainMenu
-GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/_Levels/BattleGround.BattleGround
+GameDefaultMap=/Game/_Levels/BattleGround.BattleGround
 GlobalDefaultGameMode=/Game/Tank/BattleTankGameMode_BP.BattleTankGameMode_BP_C
 
 [/Script/Engine.PhysicsSettings]
@@ -51,5 +51,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
